package com.company;

import com.company.views.Menu;

public class Main {

    public static void main(String[] args) {
        // write your code here
        Menu.startApp();
    }
}
