package com.company.user;

public class Admin extends User {
    // -------------------------------------------------
    // variables membres
    // -------------------------------------------------


    // -------------------------------------------------
    // constructor
    // -------------------------------------------------

    public Admin() {
        setName("Admin");
        setPassword("Root");
    }

    // -------------------------------------------------
    // méthodes
    // -------------------------------------------------

    // -------------------------------------------------
    // getters
    // -------------------------------------------------

    // -------------------------------------------------
    // setters
    // -------------------------------------------------

}
