package com.company.user;

public class User {
    // -------------------------------------------------
    // variables membres
    // -------------------------------------------------

    // -------------------------------------------------
    //constructor
    // -------------------------------------------------

    public User() {

    }

    // -------------------------------------------------
    // méthodes
    // -------------------------------------------------

    // public void choiceMenu
    // todo repenser à la refacto

    // -------------------------------------------------
    // getters
    // -------------------------------------------------

    // -------------------------------------------------
    // setters
    // -------------------------------------------------


}
