@startuml

class Main {

}
Main - Menu

class Menu {
startApp()
chooseRole()
 }

class Auth {
authentication ( )
createAccount( )
}

class UserDatabase {

}

Auth -- UserDatabase

Auth -- ClientInterface
Auth -- AdminInterface

class ClientInterface {

choiceMenu()
}

ClientInterface -- Client

class AdminInterface {

}

AdminInterface -- Admin

class User {
m_sName
m_sPassword
==
browseAllProducts ( )
}

class Admin extends User {
==
addProductToMarket ( )
displayAllOrder ( )
}

Admin -- Market

class Client extends User {
==
addProductToCart( )
cancelPurchase ( )
confirmPurchase ( )
}

Client -- Market
Client - Cart

class Market {
m_aSalesHistory
m_iQuantityStock?
==
updateStore ( )
getStore ( ’)
}

Market -- Database

class Database {
m_aProductListAll
==
}

class Cart {
m_aProductList
==
}

class Product {
m_sName
m_sRef
m_iNumberSale
m_iUnitPrice
m_iQuantityStock?
}

Product -- Database

class Order {

}

@enduml